test/compilable/imports/depsOutput9948a.d
module imports.depsOutput9948a;

void templateFunc(string myImport)()
{
   mixin(myImport);
}