test/fail_compilation/test2830c.d
module test2830c;

import imports.test2830c;

void foo()
{
    TestClass c;
}
